sqldump: refactoring/cleanup